# Text-Mining

./: .gitignore  LDA_analysis.ipynb  README.md  extract_data.ipynb  feature_engineering.ipynb  prediction_model.ipynb  prediction_model_v2.ipynb  preprocessing.ipynb  pyproject.toml  target_variable.csv
TA 8/: class.ipynb  main.py  pyproject.toml
data/: final_df.csv
data/processed/: target_variable.csv
data/raw/: lyrics_raw.csv
models/: logreg_audio_ling_tfidf.pkl  scaler_audio_ling_tfidf.pkl  tfidf_best_features.json
notebooks/: 01_extract_data.ipynb  02_preprocessing.ipynb  03_feature_engineering.ipynb  04_lda_analysis.ipynb  05_prediction_model.ipynb
