[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langdetect>=1.0.9",
    "lyricsgenius>=3.10.1",
    "kagglehub>=1.0.0",
    "pandas>=2.2.2",
    "tqdm>=4.67.1",
    "spotipy>=2.26.0",
    "python-dotenv>=1.2.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "scikit-learn>=1.8.0",
    "numpy>=2.4.3",
    "nltk>=3.9.3",
    "seaborn>=0.13.2",
    "nbformat>=5.10.4",
]
